xserver-xorg-input-joystick (1:1.5.0-2) UNRELEASED; urgency=low

  * Install a udev rules file to autoload the driver.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 08 Dec 2009 16:32:07 +0200

xserver-xorg-input-joystick (1:1.5.0-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * New upstream release.
  * Bump Standards-Version to 3.8.3.
  * Build against Xserver 1.7.

  [ Julien Cristau ]
  * Build-depend on libusbhid-dev on kfreebsd.

  [ Cyril Brulebois ]
  * Upload to experimental.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Dec 2009 22:56:05 +0100

xserver-xorg-input-joystick (1:1.4.1-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Wed, 15 Apr 2009 13:16:37 +0200

xserver-xorg-input-joystick (1:1.4.0-1) unstable; urgency=low

  * Run autoreconf on build.
  * Allow parallel builds.
  * New upstream release.
  * Build against xserver 1.6.
  * Use Vcs-* instead of XS-Vcs-*.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:12:48 +0100

xserver-xorg-input-joystick (1:1.3.2-1) unstable; urgency=low

  * New upstream release.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.
    + Build-depend on dpkg-dev >= 1.14.17.

 -- Brice Goglin <bgoglin@debian.org>  Sat, 17 May 2008 12:09:11 +0200

xserver-xorg-input-joystick (1:1.3.1-1) unstable; urgency=low

  * New upstream release.
  * Build-depend on x11proto-kb-dev, thanks Aaron M. Ucko,
    closes: #448770.

 -- Brice Goglin <bgoglin@debian.org>  Sat, 08 Dec 2007 12:35:12 +0100

xserver-xorg-input-joystick (1:1.3.0-2) unstable; urgency=low

  * Update upstream ChangeLog.

 -- Drew Parsons <dparsons@debian.org>  Mon, 29 Oct 2007 00:38:35 +1100

xserver-xorg-input-joystick (1:1.3.0-1) unstable; urgency=low

  * New upstream version. This is upstream version (git tag)