@@ -1,6 +1,7 @@
 xserver-xorg-input-joystick (1:1.5.0-2) UNRELEASED; urgency=low
 
   * Install a udev rules file to autoload the driver.
+  * Run udevadm trigger on postinst, and depend on udev [linux-any].
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 08 Dec 2009 16:32:07 +0200
 
